Styling added upto payment